G4E-5177: Fix applications folder items height issue. Fix wrong height of drawer on app row number change issue. Fix layouts menu on horizontal drawer issue.

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -273,10 +273,6 @@ html {
         .action-menu-tool {
           opacity: 1;
         }
-
-        span:last-of-type {
-          padding-right: 1.25rem;
-        }
       }
     }
 
