--- a/scss/top.scss
+++ b/scss/top.scss
@@ -10,8 +10,10 @@
         margin-top: 0 !important;
       }
 
-      .layout-menu-tool {
-        top: -6rem;
+      .layouts-nav {
+        .layout-menu-tool {
+          top: -6rem;
+        }
       }
 
       .icon-angle-right {
